--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Rock Paper Scissors</title>
   </head>
   <body>
-    <script src="./game.js
-        "></script>
+    <script src="./game.js"></script>
   </body>
 </html>
