--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Rock Paper Scissor</title>
   </head>
   <body>
+    <div id="game-container"></div>
     <script src="./game.js"></script>
   </body>
 </html>
